# ML_non_equilibrium_de

./: LICENSE  README.md
simulation_code/de_c_pure/: CMakeLists.txt  analysis.h  lattice_base.h  main.cpp  vec3.hpp
simulation_code/negf_ml/: constant.py  de2.slurm  de_c_pure  energy.csv  left_test_bond_analysis.py  main.py  right_test_bond_analysis.py  share_file.csv  test_bond_analysis.py
simulation_code/negf_ml/data_input/: bond0.csv  bond1.csv  bond2.csv  bond27.csv  bond28.csv  bond29.csv  bond3.csv  bond30.csv  bond31.csv  bond4.csv  bond_5_3only_74_458_2432.csv
simulation_code/negf_ml/snapshot_save/: screenshot_0.csv  screenshot_1.csv  screenshot_2.csv  screenshot_3.csv
training_script/: help.py  test_bond_analysis.py  train.py
